--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,14 +5,17 @@
     <nav class="site-nav">
 
       <div class="trigger">
-        <!-- {{ site.title }} instead of blog -->
-        <a class="page-link" href="{{ site.baseurl }}/">blog</a>
+             {{ site.title }}
+        <a class="page-link" href="{{ site.baseurl }}">home</a>
 
-        {% for page in site.pages %}
+        <!-- {{ site.title }} instead of blog -->
+        <a class="page-link" href="https://www.webdevholland.com/" target="_blank">blog</a>
+        
+        <!-- {% for page in site.pages %}
           {% if page.title %}
           <a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>
           {% endif %}
-        {% endfor %}
+        {% endfor %} -->
 
       </div>
     </nav>
