--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,7 +9,7 @@
         <a class="page-link" href="{{ site.baseurl }}">home</a>
 
         <!-- {{ site.title }} instead of blog -->
-        <a class="page-link" href="https://www.webdevholland.com/" target="_blank">blog</a>
+        <a class="page-link" href="https://www.webdevholland.com/">blog</a>
         
         <!-- {% for page in site.pages %}
           {% if page.title %}
