--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,11 +11,11 @@
         <!-- {{ site.title }} instead of blog -->
         <a class="page-link" href="https://www.webdevholland.com/">blog</a>
         
-        <!-- {% for page in site.pages %}
+        {% for page in site.pages %}
           {% if page.title %}
-          <a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>
+          <a class="page-link" href="{{ page.url | prepend: web-development }}">{{ page.title }}</a>
           {% endif %}
-        {% endfor %} -->
+        {% endfor %}
 
       </div>
     </nav>
