--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,12 +8,8 @@
         
         <a class="page-link" href="{{ site.baseurl }}">home</a>
 
-        {% for page in site.pages %}
-          {% if page.title %}
-          <a class="page-link" href="{{ page.url | prepend: web-development }}">{{ page.title }}</a>
-          {% endif %}
-        {% endfor %}
-        
+        <a class="page-link" href="{{ collections.web-development }}">web development</a>
+                
         <a class="page-link" href="https://www.webdevholland.com/">blog</a>
                 
       </div>
