--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,7 +8,7 @@
         
         <a class="page-link" href="{{ site.baseurl }}">home</a>
 
-        <a class="page-link" href="{{ collections.web-development | prepend: site.baseurl }}">web development</a>
+        <!-- <a class="page-link" href="{{ collections.web-development | prepend: site.baseurl }}">web development</a> -->
                 
         <a class="page-link" href="https://www.webdevholland.com/">blog</a>
                 
