--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,9 +6,11 @@
 
       <div class="trigger">
         
-        <a class="page-link" href="{{ site.baseurl }}">home</a>
-
-        <!-- <a class="page-link" href="{{ collections.web-development | prepend: site.baseurl }}">web development</a> -->
+        {% for page in site.pages %}
+          {% if page.title %}
+          <a class="page-link" href="{{ page.url | prepend: site.baseurl }}">home</a>
+          {% endif %}
+        {% endfor %}
                 
         <a class="page-link" href="https://www.webdevholland.com/">blog</a>
                 
