--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,11 +8,11 @@
         
         {% for page in site.pages %}
           {% if page.title %}
-          <a class="page-link" href="{{ page.url | prepend: site.baseurl }}">home</a>
+          <a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>
           {% endif %}
         {% endfor %}
                 
-        <a class="page-link" href="https://www.webdevholland.com/">blog</a>
+        <a href="https://www.webdevholland.com/">blog</a>
                 
       </div>
     </nav>
