--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,6 +6,8 @@
 
       <div class="trigger">
         
+        <a class="page-link" href="{{ site.baseurl }}/">home</a>
+        
         {% for page in site.pages %}
           {% if page.title %}
           <a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>
