--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -194,9 +194,19 @@ pre {
  * Wrapper
  */ 
 
-.wrapper {
+.site-footer.wrapper {
     max-width: -webkit-calc(400px - (#{$horizontal-spacing-unit} * 2));
     max-width:         calc(400px - (#{$horizontal-spacing-unit} * 2));
+
+    @include media-query($on-laptop) {
+        max-width: -webkit-calc(400px - (#{$horizontal-spacing-unit}));
+        max-width:         calc(400px - (#{$horizontal-spacing-unit}));
+    }
+}
+
+.wrapper {
+    max-width: -webkit-calc(800px - (#{$horizontal-spacing-unit} * 2));
+    max-width:         calc(800px - (#{$horizontal-spacing-unit} * 2));
     margin-right: auto;
     margin-left: auto;
     padding-right: $horizontal-spacing-unit;
@@ -204,8 +214,8 @@ pre {
     @extend %clearfix;
 
     @include media-query($on-laptop) {
-        max-width: -webkit-calc(400px - (#{$horizontal-spacing-unit}));
-        max-width:         calc(400px - (#{$horizontal-spacing-unit}));
+        max-width: -webkit-calc(800px - (#{$horizontal-spacing-unit}));
+        max-width:         calc(800px - (#{$horizontal-spacing-unit}));
         padding-right: $spacing-unit / 2;
         padding-left: $spacing-unit / 2;
     }
