--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <footer class="site-footer">
 
   <div class="wrapper">
-  	<p>This site was built using <a href="http://jekyllrb.com" target="_blank">Jekyll</a> and is hosted on <a href="https://github.com" target="_blank">Github</a>. Photos from <a href="https://unsplash.com" target="_blank">Unsplash</a>. &#169; 2019</p>
+  	<p>This site was built using <a href="http://jekyllrb.com">Jekyll</a> and is hosted on <a href="https://github.com">Github</a>. Photos from <a href="https://unsplash.com">Unsplash</a>. &#169; 2019</p>
   </div>
 
 </footer>
