--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,7 +14,7 @@
           {% endif %}
         {% endfor %}
                 
-        <a href="https://www.webdevholland.com/">blog</a>
+        <a class="page-link" href="https://www.webdevholland.com/">blog</a>
                 
       </div>
     </nav>
