--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,7 +6,7 @@
 
       <div class="trigger">
         
-        <a class="page-link" href="{{ site.baseurl }}/">home</a>
+        <a class="page-link" href="{{ site.baseurl }}/">welcome</a>
         
         {% for page in site.pages %}
           {% if page.title %}
