--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,12 +8,10 @@
         
         <a class="page-link" href="{{ site.baseurl }}/">welcome</a>
         
-        {% for page in site.pages %}
-          {% if page.title %}
-          <a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>
-          {% endif %}
-        {% endfor %}
-                
+        <a class="page-link" href="https://www.webdevholland.com/portfolio/projects/">projects</a>
+        
+        <a class="page-link" href="https://www.webdevholland.com/portfolio/credits/">credits</a>
+        
         <a class="page-link" href="https://www.webdevholland.com/">blog</a>
                 
       </div>
