--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,7 +10,7 @@
         
         <a class="page-link" href="https://www.webdevholland.com/portfolio/projects/">projects</a>
         
-        <a class="page-link" href="https://www.webdevholland.com/portfolio/credits/">credits</a>
+        <a class="page-link" href="https://www.webdevholland.com/portfolio/more/">more</a>
         
         <a class="page-link" href="https://www.webdevholland.com/">blog</a>
                 
