--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,11 +8,11 @@
         
         <a class="page-link" href="{{ site.baseurl }}/">welcome</a>
         
-        <a class="page-link" href="https://www.webdevholland.com/portfolio/projects/">projects</a>
+        <a class="page-link" href="https://webdevholland.github.io/portfolio/projects/">projects</a>
         
-        <a class="page-link" href="https://www.webdevholland.com/portfolio/more/">more</a>
+        <a class="page-link" href="https://www.webdevholland.github.io/portfolio/more/">more</a>
         
-        <a class="page-link" href="https://www.webdevholland.com/">blog</a>
+        <a class="page-link" href="https://www.webdevholland.github.io/">blog</a>
                 
       </div>
     </nav>
