--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,9 +10,9 @@
         
         <a class="page-link" href="https://webdevholland.github.io/portfolio/projects/">projects</a>
         
-        <a class="page-link" href="https://www.webdevholland.github.io/portfolio/more/">more</a>
+        <a class="page-link" href="https://webdevholland.github.io/portfolio/more/">more</a>
         
-        <a class="page-link" href="https://www.webdevholland.github.io/">blog</a>
+        <a class="page-link" href="https://webdevholland.github.io/">blog</a>
                 
       </div>
     </nav>
